# cli-notes-manager

./: EXAMPLE_NOTES_REPO.md  README.md  config.example.toml  pyproject.toml
example_notes_repo/notes/general/: commands.md
example_notes_repo/notes/hacking/: _index.yml
example_notes_repo/notes/hacking/tools/: _index.yml  nmap.md  wireshark.md
notes_cli/: app.py  config.py
notes_cli/content/: loader.py  markdown.py
notes_cli/git/: quick_sync.py  status.py
notes_cli/search/: index.py
notes_cli/ui/: render.py
notes_cli/utils/: calc.py
tests/: test_calc.py  test_loader.py
